# DemoC

./: .editorconfig  CMakeLists.txt  Practice.sln  Practice.vcxproj  Practice.vcxproj.filters  PracticeC.sln  PracticeC.vcxproj  PracticeC.vcxproj.filters  README.md  day02Work.cpp  day07Work.cpp  day07Work.h  day08Work.cpp  day09Work.cpp  dayWork.cpp  example.cpp  example.h  example01.cpp  example0100.cpp  example0100.h  example02.cpp  example0200.cpp  example03.cpp  example0300.cpp  example04.cpp  example0400.cpp  example0401.cpp  example0401.h  example0402.cpp  example0403.cpp  example0403.h  example0404.cpp  example0405.cpp  example0406.cpp  example05.cpp  example0500.cpp  example0501.cpp  example06.cpp  example0600.cpp  example0601.cpp  (+20 more)
File/: myFile.txt
example/: CMakeLists.txt  example.cpp
example/src/: example01.cpp  example0300.cpp  example04.cpp  example0401.cpp  example0402.cpp  example0404.cpp  example0405.cpp  example0406.cpp  example05.cpp  example0501.cpp  example06.cpp  example0602.cpp  example0603.cpp  example0700.cpp  example0704.cpp  example0705.cpp  example08.cpp  example0800.cpp  example09.cpp  example0900.cpp  example1000.cpp
src/: dayWork.cpp
src/example/: example01.cpp  example0100.cpp  example02.cpp  example0200.cpp  example03.cpp  example04.cpp  example0400.cpp  example0403.cpp  example0500.cpp  example0600.cpp  example0601.cpp  example07.cpp  example0701.cpp  example0702.cpp  example0703.cpp  example0800.cpp  example0801.cpp  example0802.cpp  example10.cpp  example1000.cpp
src/work/: day02Work.cpp  (+2 more)
work/: CMakeLists.txt  dayWork.cpp
(+13 files in other folders)
